--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ section {
     font-size: 38px;
   }
 
-/* trainers */
+/* trainers section begins */
 
 .trainers {
     text-align: center;
@@ -240,4 +240,48 @@ section {
     line-height: 1.3;
   }
 
-  
+/* trainers section ends */
+
+
+/* REACH OUT STYLES START */
+.contact {
+  text-align: center;
+  background: #024e76;
+}
+
+.contact h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+
+
+.contact-info p, .contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+
+.contact-info a {
+  color: #fce138;
+}
+
+/* REACH OUT STYLES END */
