--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,33 +38,36 @@ header h1 {
       margin: 7px 0;
   }
 
-  header nav ul li {
-      display: inline;
+  header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
   }
 
   header nav ul li a {
-      margin: 0 30px;
-      font-weight: lighter;
-      font-size: 22px;
+    margin: 0 30px;
+    font-weight: lighter;
+    font-size: 1.55vw;
   }
 
 /* hero style start */
     .hero {
         background-image: url(../images/hero-bg.jpg);
-        height: 600px;
         background-size: cover;
-        background-position: center;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 
     .hero-form {
         border: 3px solid #024e76;
         background-color: #fce138;
         padding: 20px;
-        width: 500px;
         color: #024e76;
-        position: absolute;
-        bottom: 120px;
-        right: 140px;
+        width: 40%;
+        margin: 3.5%;
       }
 
       .form-input {
@@ -98,39 +101,23 @@ header h1 {
         font-size: 16px;
     }
     
+    .hero-cta {
+      width: 35%;
+      text-align: right;
+      margin: 3.5%;
+      color: #fff;
+      font-size: 18px;
+      line-height: 1.3;
+    }
+
+    .hero-cta h2 {
+      font-style: italic;
+      font-size: 55px;
+      color: #fce138;
+    }
     
 /* hero style end */
 
-/* footer style start */
-
-  footer {
-      background: #fce138;
-      width: 100%;
-      padding: 40px 35px;
-  }
-
-  footer h2 {
-      display: inline;
-      color: #024e76;
-      font-size: 30px;
-      margin: 0;
-  }
-
-  footer div {
-      float: right;
-      line-height: 1.5;
-      text-align: right;
-  }
-
-  footer a {
-      color: #024e76
-  }
-
-section {
-    padding: 60px;
-
-}
-/* footer style end */
 
 /* what you do */
 
@@ -286,3 +273,36 @@ section {
 }
 
 /* REACH OUT STYLES END */
+
+
+/* footer style start */
+
+footer {
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+footer h2 {
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
+
+footer div {
+  line-height: 1.5;
+  text-align: right;
+}
+
+footer a {
+  color: #024e76
+}
+
+section {
+padding: 60px;
+
+}
+/* footer style end */
