--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,27 +202,42 @@ header h1 {
 
 /* trainers section begins */
 
-.trainers {
-    text-align: center;
+  .trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 
   .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto
+    flex: 1;
   }
 
   .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
   }
   
   .trainer-bio {
-    padding: 35px;
+    padding: 25px;
     float: left;
-    width: 65%;
+  }
+
+  .trainer-bio h3 {
+    font-size: 28px;
+  }
+
+  .trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+
+  .trainer-bio p {
+    font-size: 17px;
   }
 
   .text-left {
@@ -235,22 +250,6 @@ header h1 {
 
   .flex-row {
     display: flex;
-  }
-
-  .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
-  }
-
-  .trainer-bio h4 {
-    font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
-  }
-
-  .trainer-bio p {
-    font-size: 17px;
-    line-height: 1.3;
   }
 
 /* trainers section ends */
