--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,6 +255,19 @@ header h1 {
 
 /* trainers section ends */
 
+/* service section starts */
+
+.service-grid-container {
+  display: grid;
+}
+
+.service-grid-item {
+  width: 200px;
+  height: 50px;
+  background-color: orange;
+  border: solid;
+  color: black;
+}
 
 /* REACH OUT STYLES START */
 .contact {
