--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,16 +257,42 @@ header h1 {
 
 /* service section starts */
 
+.grid-container {
+  grid-gap: <grid-row-gap> <grid-column-gap>;
+  justify-items: start | end | center | stretch;
+  place-items: <align-items>  <justify-items>;
+
+ }
+ 
 .service-grid-container {
+  max-width: 940px;
+  margin: 0 auto;
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 100px);
+  grid-gap: 10px;
 }
 
 .service-grid-item {
-  width: 200px;
-  height: 50px;
   background-color: orange;
   border: solid;
+  padding: 1em;
   color: black;
+}
+
+.box1 {
+  grid-column: 1/ span 1; 
+  grid-row: 1/ span 2;
+}
+
+.box2 {
+  grid-column: 3/ span 1;
+  grid-row: 1/ span 3;
+}
+
+.box3 {
+  grid-column: 2 /span 2;
+  grid-row: 3 /span 1;
 }
 
 /* REACH OUT STYLES START */
