--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,15 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url(../images/hero-bg.jpg);
+    background-size: cover;
+    justify-content: center;
+    background-attachment: fixed;
+background-position: 80%;
+
 }
 
 header h1 {
@@ -27,7 +36,9 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
+  
 
   header a {
       text-decoration: none;
@@ -50,72 +61,99 @@ header h1 {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
+  header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
+
 /* hero style start */
-    .hero {
-        background-image: url(../images/hero-bg.jpg);
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        align-items: flex-start;
-    }
+.hero {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    background-image: url(../images/hero-bg.jpg);
+    background-size: cover;
+    justify-content: center;
+    background-attachment: fixed;
+    background-position: 80%;
+}
 
-    .hero-form {
-        border: 3px solid #024e76;
-        background-color: #fce138;
-        padding: 20px;
-        color: #024e76;
-        width: 40%;
-        margin: 3.5%;
-      }
+.hero-form {
+    border: 3px solid #024e76;
+    background-color: rgb(252, 225, 56, .8);
+    padding: 20px;
+    color: #024e76;
+    width: 40%;
+    margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+  }
 
-      .form-input {
-          font-size: 16px;
-          border: 3px solid black;
-          display: block;
-          padding: 7px 15px;
-          color: #024e76;
-          width: 100%;
-          margin-bottom: 15px;        
-      }
+.form-input {
+    font-size: 16px;
+    border: 3px solid black;
+    display: block;
+    padding: 7px 15px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;  
+    border-radius: 15px;  
+    background-color: rgba(255,255,255, 0.75);    
+}
 
-    .hero-form h3 {
-        font-size: 30px;    
-        margin: 0;  
-    }
-    
-    .hero-form p {
-        margin: 5px 0 15px 0;
-    }
-    
-    .hero-form label {
-        margin: 0 5px;
-    }
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
 
-    .hero-form button {
-        background-color: #024e76;
-        color: #fce138;
-        padding: 20px;
-        border: none;
-        font-size: 16px;
-    }
-    
-    .hero-cta {
-      width: 35%;
-      text-align: right;
-      margin: 3.5%;
-      color: #fff;
-      font-size: 18px;
-      line-height: 1.2;
-    }
+.hero-form h3 {
+    font-size: 30px;    
+    margin: 0;  
+}
 
-    .hero-cta h2 {
-      font-style: italic;
-      font-size: 55px;
-      color: #fce138;
-    }
+.hero-form p {
+    margin: 5px 0 15px 0;
+}
+
+.hero-form label {
+    margin: 0 5px;
+}
+
+.hero-form button {
+    background-color: #024e76;
+    color: #fce138;
+    padding: 20px;
+    border: none;
+    font-size: 16px;
+    border-radius: 15px;   
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
+}
+
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
     
 /* hero style end */
 
@@ -199,6 +237,10 @@ header h1 {
 
   .step-img img {
     max-width: 100%;
+  }
+
+  .step:last-child {
+    border-bottom: none;
   }
 
 /* trainers section begins */
@@ -366,6 +408,13 @@ header h1 {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 15px;  
+  background-color: rgba(255,255,255, 0.75); 
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 
 .contact-form button {
@@ -376,6 +425,12 @@ header h1 {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 15px;   
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
 }
 
 /* REACH OUT STYLES END */
@@ -419,6 +474,7 @@ padding: 60px;
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
