--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,26 @@
     box-sizing: border-box;
   }
 
+  :root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
+
+
 /* apply styles to all */
 
 
 /* apply styles to body */
 body {
     font-family: Arial, Helvetica, sans-serif;
-    color: #39a6b2;
+    color: var(--teriary-color);
 }
 
 /* apply styles to header */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--teriary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -28,13 +35,14 @@ header {
     justify-content: center;
     background-attachment: fixed;
 background-position: 80%;
+z-index: 9999;
 
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
@@ -42,7 +50,7 @@ header h1 {
 
   header a {
       text-decoration: none;
-      color: #fce138;
+      color: var(--primary-color);
   }
 
   header nav {
@@ -65,8 +73,8 @@ header h1 {
   }
 
   header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 15px;
     text-shadow: none;
   }
@@ -85,10 +93,10 @@ header h1 {
 }
 
 .hero-form {
-    border: 3px solid #024e76;
+    border: 3px solid var(--secondary-color);
     background-color: rgb(252, 225, 56, .8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -100,7 +108,7 @@ header h1 {
     border: 3px solid black;
     display: block;
     padding: 7px 15px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;  
     border-radius: 15px;  
@@ -126,8 +134,8 @@ header h1 {
 }
 
 .hero-form button {
-    background-color: #024e76;
-    color: #fce138;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     padding: 20px;
     border: none;
     font-size: 16px;
@@ -135,7 +143,67 @@ header h1 {
 }
 
 .hero-form button:hover {
-  background-color: #39a6b2;  
+  background-color: var(--teriary-color); 
+}
+
+.checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color); 
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: var(--secondary-color);
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, var(--teriary-color);, var(--secondary-color););
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid var(--secondary-color);
+  border-bottom: 2px solid var(--secondary-color);
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
 }
 
 
@@ -151,7 +219,7 @@ header h1 {
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
-  color: #fce138;
+  color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
     
@@ -162,7 +230,7 @@ header h1 {
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--teriary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -170,12 +238,12 @@ header h1 {
   }
 
 .steps { 
-    background: #fce138;
+    background: var(--primary-color);
   }
 
   .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -184,18 +252,18 @@ header h1 {
   }
   
   .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color);
   }
   
   .secondary-border {
-    border-color: #39a6b2;
+    border-color: var(--teriary-color);
   }
 
   .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+    border-bottom: 1px solid var(--teriary-color);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -207,7 +275,7 @@ header h1 {
   }
   
   .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
   }
@@ -215,11 +283,11 @@ header h1 {
   .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
   }
   
   .step-text p {
-    color: #39a6b2;
+    color: var(--teriary-color);
     font-size: 18px;
   }
 
@@ -255,8 +323,8 @@ header h1 {
 
   .trainer {
     margin: 20px;
-    background: #024e76;
-    color: #fce138;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     flex: 1;
   }
 
@@ -301,7 +369,7 @@ header h1 {
 
 /* SERVICE STYLES BEGIN */
 .services {
-  background: #fce138; 
+  background: var(--primary-color); 
 }
 
 .service-grid-wrapper {
@@ -317,14 +385,14 @@ header h1 {
   /* repeat(iterator, size) */
   grid-template-columns: 1fr repeat(2, 4fr);
   grid-template-rows: repeat(5, 1fr) 2fr;
-  border: 2px solid #024e76;
-  color:  #024e76;
+  border: 2px solid var(--secondary-color);
+  color:  var(--secondary-color);
   font-size: 1.2rem;
 }
 
 .service-grid-item {
   padding: 15px 0;
-  border: 2px solid #024e76;
+  border: 2px solid var(--secondary-color);
   display: flex;
   align-items: center;
   justify-content:center;
@@ -356,11 +424,11 @@ header h1 {
 
 /* REACH OUT STYLES START */
 .contact {
-  background: #024e76;
+  background: var(--secondary-color);
 }
 
 .contact h2 {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-info
@@ -384,7 +452,7 @@ header h1 {
 }
 
 .contact-info h3 {
-  color: #fce138;
+  color: var(--primary-color);
   font-size: 32px;
 }
 
@@ -396,15 +464,15 @@ header h1 {
 }
 
 .contact-info a {
-  color: #fce138;
+  color: var(--primary-color);
 }
 
 .contact-form input, .contact-form textarea {
-  border: 1px solid #024e76;
+  border: 1px solid var(--secondary-color);
   display: block;
   padding: 7px 15px;
   font-size: 16px;
-  color: #024e76;
+  color: var(--secondary-color);
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
@@ -420,8 +488,8 @@ header h1 {
 .contact-form button {
   width: 100%;
   border: none;
-  background: #fce138;
-  color: #024e76;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
@@ -429,8 +497,8 @@ header h1 {
 }
 
 .contact-form button:hover {
-  color: #fce138;
-  background: #39a6b2;
+  color: var(--primary-color);
+  background: var(--teriary-color);
 }
 
 /* REACH OUT STYLES END */
@@ -439,7 +507,7 @@ header h1 {
 /* footer style start */
 
 footer {
-  background: #fce138;
+  background: var(--primary-color);
   width: 100%;
   padding: 40px 35px;
   display: flex;
@@ -448,7 +516,7 @@ footer {
 }
 
 footer h2 {
-  color: #024e76;
+  color: var(--secondary-color);
   font-size: 30px;
   margin: 0;
 }
@@ -459,7 +527,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76
+  color: var(--secondary-color);
 }
 
 section {
